test/files/neg/t7388.check
t7388.scala:1: error: doesnotexist is not an enclosing class
class Test private[doesnotexist]()
           ^
1 error
